# python-cli-tools-course

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
examples/argparse/: example.json  jformat.py
examples/sys/: jformat.py
jformat/: main.py  utils.py
tests/: test_utils.py
